test/envoy-ext-proc/envoy.yaml

# ok!!!
# curl localhost:10000 -i

admin:
#  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 15000

node:
  cluster: demo_service_cluster
  id: demo_id

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
                generate_request_id: true
                codec_type: "AUTO"
                stat_prefix: ingress_http

                http_filters:
                  - name: envoy.filters.http.ext_proc
                    typed_config:
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor"
                      failure_mode_allow: false

                      # 查看字段含义 https://www.envoyproxy.io/docs/envoy/latest/api-v3/extensions/filters/http/ext_proc/v3/ext_proc.proto
                      processing_mode:
                        request_header_mode: "SEND"
                        response_header_mode: "SEND"
                        request_body_mode: "NONE"
                        response_body_mode: "NONE"
                        request_trailer_mode: "SKIP"
                        response_trailer_mode: "SKIP"
                      grpc_service: # https://www.envoyproxy.io/docs/envoy/latest/api-v3/config/core/v3/grpc_service.proto
                        envoy_grpc:
#                          cluster_name: original_destination_cluster
                          cluster_name: ext-proc

                  # https://www.envoyproxy.io/docs/envoy/latest/configuration/overview/examples
                  # 简单代理 proxy, 需要加上这个 http_filters: envoy.filters.http.router

                  # Router filter (must be last)

                  # 实现 route_config 里的 routes. 除了转发和重定向之外，该过滤器还负责重试、统计信息等操作
                  # 字段定义 proto: https://www.envoyproxy.io/docs/envoy/latest/api-v3/extensions/filters/http/router/v3/router.proto
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                      # suppress_envoy_headers: true

                # https://www.envoyproxy.io/docs/envoy/latest/intro/arch_overview/http/http_routing
                # route_config 字段定义：https://www.envoyproxy.io/docs/envoy/latest/api-v3/config/route/v3/route_components.proto
                route_config:
                  name: route
                  virtual_hosts:
                    - name: service
                      domains: [ "*" ]
                      # https://www.envoyproxy.io/docs/envoy/latest/api-v3/config/route/v3/route_components.proto#envoy-v3-api-msg-config-route-v3-routelist
                      routes:
                        - match:
                            prefix: "/unprotected"
                          route:
                            cluster: original_destination_cluster
#                            cluster: service
                            timeout: 30s
                          typed_per_filter_config:
                            envoy.filters.http.ext_proc:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExtProcPerRoute
                              disabled: true # 禁用 ext-proc
                        - match:
                            prefix: "/"
                          route:
                            cluster: original_destination_cluster
#                            cluster: service
                            timeout: 3s

                # https://www.envoyproxy.io/docs/envoy/latest/configuration/overview/examples
                # 简单代理 proxy, 需要加上这个 http_filters: envoy.filters.http.router
#                http_filters:
#                  - name: envoy.filters.http.router
#                    typed_config:
#                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router


                          # omitting renders the following defaults
                          # typed_per_filter_config:
                          #   envoy.filters.http.ext_proc:
                          #     "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExtProcPerRoute
                          #     disabled: false


  clusters:
    - name: service
      connect_timeout: 5s
      type: STRICT_DNS # STATIC
      lb_policy: ROUND_ROBIN
      http_protocol_options: { }
      load_assignment:
        cluster_name: service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 9099

    - name: ext-proc
      connect_timeout: 500s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      http2_protocol_options: { }
      load_assignment:
        cluster_name: ext-proc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 50051


    - name: original_destination_cluster
      connect_timeout: 500s
      type: ORIGINAL_DST
      lb_policy: CLUSTER_PROVIDED
      dns_lookup_family: V4_ONLY
      original_dst_lb_config: # 会代理到 target-pod 指定的 ip:port 地址
        use_http_header: true
        http_header_name: target-pod
